menyempurnakan portfolio page

--- a/assets/css/virtual.css
+++ b/assets/css/virtual.css
@@ -144,6 +144,19 @@ a:active {
   z-index: 99;
 }
 
+.zoom {
+  transition: transform 0.3s; /* Animation */
+  width: 55px;
+  height: 55px;
+  margin: 0 auto;
+}
+
+.zoom:hover {
+  transform: scale(
+    1.5
+  ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
+
 /* 
     2. Button
 */
